--- a/blog/static/style/components/header.less
+++ b/blog/static/style/components/header.less
@@ -3,17 +3,19 @@
     padding: 0 .4rem;
     overflow: hidden;
     height: 3.2rem;
-    border-bottom:1px solid #ccc;
+    border-bottom: 1px solid #e8e8e8; 
 }
 .header-logo{
     color:#1e90ff;
     font-size: 1.4rem;
     text-align: left;
-
 }
 .header-txt{
     font-size: 0.6rem;
     color: #999;
     display: inline-block;
     padding-left: 0.3rem;
+}
+.ant-menu-horizontal {
+    border: none;
 }
