--- a/blog/static/style/pages/common.less
+++ b/blog/static/style/pages/common.less
@@ -1,3 +1,20 @@
 body{
     background-color: #f6f6f6;
 }
+
+.comm-main {
+    margin-top: 0.5rem;
+    .comm-left {
+        background-color: #fff;
+        padding: 0.3rem;
+        border-radius:  0.3rem;
+        border-bottom: 1px solid #eeeeee;
+    }
+    .comm-right {
+        background-color: #fff;
+        padding: 0.3rem;
+        border-radius:  0.3rem;
+        border-bottom: 1px solid #eeeeee;
+        margin-left: 0.5rem;
+    }
+}
