--- a/blog/static/style/pages/common.less
+++ b/blog/static/style/pages/common.less
@@ -18,3 +18,11 @@ body{
         margin-left: 0.5rem;
     }
 }
+
+.comm-box{
+    background-color: #FFF;
+    margin-left: .5rem;
+    padding:.3rem;
+    border-radius: .3rem;
+    border:1px solid #eee;
+}
