--- a/blog/static/style/pages/common.less
+++ b/blog/static/style/pages/common.less
@@ -26,3 +26,21 @@ body{
     border-radius: .3rem;
     border:1px solid #eee;
 }
+
+.list-title{
+    font-size:1.3rem;
+    color: #1e90ff;
+    padding: 0 0.5rem;
+}
+.list-context{
+    color:#777;
+    padding:.5rem;
+}
+.list-icon{
+    padding:.5rem 0;
+    color:#AAA;
+}
+.list-icon span{
+    display: inline-block;
+    padding: 0 10px;
+}
