--- a/admin/src/static/style/login.scss
+++ b/admin/src/static/style/login.scss
@@ -1,7 +1,11 @@
-.login-div{
-    margin: 150px auto;
-    width: 400px;
-}
 body{
     background-color: #f0f0f0;
+    position: relative;
+}
+.login-div{
+    width: 400px;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -30%);
 }
